ADCIONADO MASCARA NA VISUALIZAÇÃO DE CPF

--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Details.cshtml
@@ -28,8 +28,8 @@
                                     @Html.DisplayNameFor(model => model.UsuarioModel.Cpf)
                                 </dt>
                                 <dd>
-                                    <p class="form-control">@Html.DisplayFor(model => model.UsuarioModel.Cpf)</p>
-                                </dd>     
+                                    <p class="form-control">@($"***.{Model.UsuarioModel.Cpf.Substring(3, 3)}.{Model.UsuarioModel.Cpf.Substring(6, 3)}-**")</p>
+                                </dd>
                                 <dt>
                                     @org
                                 </dt>
