--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Edit.cshtml
@@ -37,12 +37,9 @@
                             </div>
                             <div class="row">
                                 <div class="input-group col-md-3">
-                                    <input asp-for="UsuarioModel.Cpf" class="form-control" placeholder="CPF" disabled />
-                                    <div class="input-group-append">
-                                        <div class="input-group-text">
-                                            <span class="fas fa-id-card"></span>
-                                        </div>
-                                    </div>
+                                    <span class="form-control" style="background-color:#e9ecef">
+                                        @($"***.{Model.UsuarioModel.Cpf.Substring(3, 3)}.{Model.UsuarioModel.Cpf.Substring(6, 3)}-**")
+                                    </span>
                                 </div>
                             </div>
                             <span asp-validation-for="UsuarioModel.Cpf" class="text-danger"></span>
