--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Details.cshtml
@@ -15,10 +15,9 @@
                     <div class="card-body">
 
                         <div class="col-md-10">
-
                             <dl class="dl-horizontal">
                                 <dt>
-                                    @Html.DisplayNameFor(model => model.Sala)
+                                    Título
                                 </dt>
                                 <dd>
                                     <p class="form-control"> @Html.DisplayFor(model => model.Sala.Titulo) </p>
