--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Organizacao/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Organizacao/Edit.cshtml
@@ -4,31 +4,40 @@
     ViewData["Title"] = "Edit";
 }
 
-
 <section class="content">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h2 class="card-title">Atualizar Organizacao</h2>
+                        <h2 class="card-title">Atualizar Organização</h2>
                     </div>
                     <form asp-action="Edit">
                         <div class="card-body">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group col-md-7">
                                 <label asp-for="RazaoSocial" class="control-label"></label>
-                                <input asp-for="RazaoSocial" class="form-control" />
+                                <div class="input-group">
+                                    <input asp-for="RazaoSocial" class="form-control" />
+                                    <span class="input-group-text">
+                                        <i class="fas fa-building"></i> 
+                                    </span>
+                                </div>
                                 <span asp-validation-for="RazaoSocial" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-4">
                                 <label asp-for="Cnpj" class="control-label"></label>
-                                <input asp-for="Cnpj" class="form-control" />
+                                <div class="input-group">
+                                    <input asp-for="Cnpj" class="form-control" />
+                                    <span class="input-group-text">
+                                        <i class="fas fa-briefcase"></i> 
+                                    </span>
+                                </div>
                                 <span asp-validation-for="Cnpj" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="card-footer">
-                            <div class=" col-md-4">
+                            <div class="col-md-4">
                                 <input type="submit" value="Salvar" class="btn btn-success" /> |
                                 <a class="btn btn-primary" asp-action="Index">Voltar</a>
                             </div>
@@ -58,6 +67,7 @@ else if (TempData["mensagemErro"] != null)
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="~/js/customCPNJ.js"></script>
     <script src="~/js/sweet-alert.js"></script>
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
