Revisão feita em Compartimento.
closed #187

--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Organizacao/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Organizacao/Details.cshtml
@@ -26,7 +26,7 @@
                                     @Html.DisplayNameFor(model => model.Cnpj)
                                 </dt>
                                 <dd>
-                                    <p class="form-control"> @Html.DisplayFor(model => model.Cnpj)</p>
+                                    <p class="form-control"> @Html.DisplayFor(model => model.Cnpj,"Cnpj")</p>
                                 </dd>
                             </dl>
                         </div>
