--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Edit.cshtml
@@ -38,8 +38,13 @@
                             <div class="row">
                                 <div class="input-group col-md-3">
                                     <span class="form-control" style="background-color:#e9ecef">
-                                        @($"***.{Model.UsuarioModel.Cpf.Substring(3, 3)}.{Model.UsuarioModel.Cpf.Substring(6, 3)}-**")
+                                        @Html.DisplayFor(model => model.UsuarioModel.Cpf, "Cpf")
                                     </span>
+                                    <div class="input-group-append">
+                                        <div class="input-group-text">
+                                            <span class="fas fa-id-card"></span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <span asp-validation-for="UsuarioModel.Cpf" class="text-danger"></span>
