Seção de Hardwares revisada!

--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Equipamento/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Equipamento/Create.cshtml
@@ -22,7 +22,7 @@
 
                             <div class="form-group col-md-8">
                                 <label asp-for="EquipamentoModel.Modelo" class="control-label"></label>
-                                <textarea asp-for="EquipamentoModel.Modelo" class="form-control" maxlength="200" rows="2"></textarea>
+                                <textarea asp-for="EquipamentoModel.Modelo" class="form-control" rows="2"></textarea>
                                 <span asp-validation-for="EquipamentoModel.Modelo" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-8">
@@ -92,7 +92,7 @@
                             </div>
                             <div class="ocupation col-md-10">
                                 <div id="ccodigo" class="form-group pr-2">
-                                    <label title="Codigo" class="control-label">Código</label>
+                                    <label title="Codigo" class="control-label">Código da Operação</label>
                                     <textarea id="codigo" class="form-control" type="text" name="codigo"></textarea>
                                 </div>
 
