--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/HardwareDeSala/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/HardwareDeSala/Index.cshtml
@@ -125,15 +125,18 @@ else if (TempData["mensagemErro"] != null)
 }
 
 @section Scripts {
-
     <script>
-        $(document).ready(function () {
-            if (document.querySelector('#mensagem-retorno'))
-                document.getElementById("mensagem-retorno").click();
-
+        $(document).ready(function () {           
+            const mensagemRetorno = document.getElementById("mensagem-retorno");
+            if (mensagemRetorno) {
+                mensagemRetorno.click();
+            }
+        });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
