--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Create.cshtml
@@ -71,7 +71,7 @@
                                     <span class="text-danger"></span>
                                 </div>
                                 <div class="form-group align-element">
-                                    <a id="add-novo-horario" onclick="AdicionarHardware()" class="btn btn-primary text-white"><i class="nav-icon fa fa-plus"></i> </a>
+                                    <a id="add-novo-horario" onclick="AdicionarHardware();document.getElementById('input-mac').value='';document.getElementById('input-ip').value=''" class="btn btn-primary text-white"><i class="nav-icon fa fa-plus"></i> </a>
                                 </div>
                                 <br />
                                 <span class="text-danger" id="mensagem-erro-hardwares" hidden></span>
