--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ConexaoInternet/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ConexaoInternet/Edit.cshtml
@@ -1,16 +1,16 @@
 ﻿@model Model.ConexaointernetModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>ConexaointernetModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
@@ -31,9 +31,9 @@
                 <label asp-for="IdBloco" class="control-label"></label>
                 <input asp-for="IdBloco" class="form-control" />
                 <span asp-validation-for="IdBloco" class="text-danger"></span>
-            </div>            
+            </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
